--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="calendarStyles.css">
+     <link rel="stylesheet" href="styles.css">
       <title>Project Calendar Website</title>
 </head>
 <body>
@@ -69,6 +69,6 @@
         </div>
         <button class="add-event">Book an Event</button>
     </div>
-    <script src="calendarScript.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
